# wind

./: .gitignore  CLAUDE.md  README.md  README_zh.md  package-lock.json  package.json  start-dev.ps1  svelte.config.js
docs/: TODO.md  technical-decisions.md
openspec/changes/add-cd-e-commands/: design.md  proposal.md  tasks.md
openspec/changes/conpty-terminal/: tasks.md
openspec/changes/image-preview/: design.md  proposal.md  tasks.md
openspec/changes/multi-tab/: design.md  tasks.md
openspec/changes/terminal-vim-navigation/: design.md
openspec/specs/atomic-preview-swap/: spec.md
openspec/specs/content-zoom/: spec.md
openspec/specs/file-search/: spec.md
openspec/specs/focus-restore/: spec.md
openspec/specs/fullscreen-image-viewer/: spec.md
openspec/specs/fullscreen-terminal/: spec.md
openspec/specs/help-overlay/: spec.md
openspec/specs/pdf-fullscreen-viewer/: spec.md
openspec/specs/pdf-preview/: spec.md
openspec/specs/pdf-rendering/: spec.md
openspec/specs/terminal-panel-navigation/: spec.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/neovim/: mod.rs
src-tauri/src/pdf/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/video/: mod.rs
src/lib/: keybindings.ts
src/lib/components/: DirectoryPanel.svelte  FloatingTerminal.svelte  FullscreenEditor.svelte  FullscreenImageViewer.svelte  FullscreenPdfViewer.svelte  FullscreenVideoPlayer.svelte  HelpOverlay.svelte  PanelLayout.svelte  PreviewEditor.svelte  SearchModal.svelte  TabBar.svelte
src/routes/: +layout.svelte  +page.svelte
(+120 files in other folders)
