[package]
name = "wind"
version = "0.1.0"
description = "Wind - A vim-driven file workstation for Windows"
authors = ["lhkeeper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
windows = { version = "0.62.2", features = ["Win32_System_Console", "Win32_Foundation"] }
rmpv = "1.3.1"
rmp-serde = "1.3.1"
regex = "1"
tokio = { version = "1", features = ["rt"] }
base64 = "0.22"
zip = "2"

